app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *= require actiontext
 *= require_tree .
 *= require_self
 */

@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&lang=en");
@import "font-awesome";
@import "rails_bootstrap_forms";
@import "devise_bootstrap_form";


html {
  box-sizing: border-box;
  margin: 0px;
  font-size: 1rem;
}
*, *:before, *:after {
  box-sizing: inherit;
}
 body {
  background-image:url("https://res.cloudinary.com/saintpaulsnaples-org/image/upload/v1426356142/logos/Saint_Pauls_Logo.gif");
  width : 100%;
  height: 100%;
  text-align:center;
  margin: 0px auto;
}

a:link {
  text-decoration: none;
  color: blue;
}
a:hover {
  text-decoration: underline;
}
.page {
 color : #333;
 background-color: #fff;
 border : 1px solid #C0C0C0;
 margin: 0 auto !important;
 padding-bottom:60px;
 min-height:100%;
 font-family : Verdana, Helvetica, Arial, Sans-Serif;
 text-align:left;
 width: 100%;
 max-width: 1200px;
}

.main-body {
  padding-right: 36px;
}
.sidebar {
  background-color: #eee;
  padding-right: .9rem;
  margin-top: 1.25rem;
  height: 100%;
    p {
      font-size: 1.1rem;
      line-height: 1.62;
    }
}
.grid-container {
  display: grid;
  grid-gap: 36px;
}
div.hidden {
  display: none;
}

.honey {
  margin-left: -2000px;
  margin-right: 2000px;
  height: 15px;
}


.way-of-love {
  display: flex;

    .love-text{
      width: 100%;
    }
    .iframe{ 
      width: 100%;
    }
    .love-image{
      width: 100%;
  }
}

.second-line {
  margin-top: -18px;
}

h1 {
color : #5c004c;
font-size : 3rem;
line-height : 1.25;
font-family : Verdana, Helvetica, Arial, Sans-Serif;
margin-top : 1.25rem;
}
h1.biggest {
  font-size: 6rem;
}

h2 {
color : #5c004c;
font-size : 2.5rem;
margin-top: 1.25 rem;
font-family : Times, Serif;
font-style : italic;
}
h3 {
color : #5c004c;
font-size : 2.5rem;
margin-top: 1.25rem;
font-family : Verdana, Helvetica, Arial, Sans-Serif;
}
h4 {
color : #5c004c;
font-size : 2rem;
font-family : Times, Serif;
margin-top : 1rem;
}
p {
    text-indent: 1em;
    font-size : 1.3rem;
    line-height: 1.5;
    margin-bottom: 24;
}
p.list{
  text-indent: 0;
}
p.tiny {
  font-size: .75rem;
  line-height: 1.1;
  margin-top: -5px;
}
.poem {
    text-indent:0;
    padding-left: 60px;
    font-style:italic;
}
.chat-name {
  font-size: 1rem;
  font-style: bold;
}
.owner-edit-links {
  font-size: .6rem;
  line-height: 1;
  margin-top: -1rem;
  padding-right: 300px;
  float: left;
}

#newsfeed {
  margin-left: 0;
  margin-right: 0;
}
.floatleft {
    float: left;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 30px;
}
.floatright {
    float: right;
    padding-left: 30px;
    padding-top: 20px;
    padding-bottom: 20px;
}
.footer {
    margin-top: 10px;
    width:100%;
    text-align: center;
}

.clearall {
  clear: both;
}
.image-center {
  display:block;
  margin-left:auto;
  margin-right:auto;
}
.center-image {
  display: block;
  margin: 0, auto;
}
.text-center{
  margin-left:auto;
  margin-right:auto;
}
.center-text{
  margin-left:auto;
  margin-right:auto;
}
.update-logo {
  position:relative;
}

.trix-content.form-control {
  min-height: 300px !important;
  overflow-y: auto !important; 
}

.sermon {
  font-size: 1.5rem;
  line-height: 1.62;
  font-family: Times, serif;
  padding-bottom: 24pt;

}
.sermon-box {
    float:right;
    margin:15px;
    height:210px;
    width:450px;
    padding:10px 10px 10px 10px;
    border:solid black;
    text-align:center;
      .ser-name {
        font-size: 1.125rem;
        line-height: 1;
      }
      .ser-title {
        margin-top: -12px;
      }
}

.sermon-picture {
  float:left;
  margin:10px;
  display:block;
}

.formation-box {
  float:right;
  margin-left: 30px;
  width: 350px;
  padding: 20px;
  border-style: solid;
  border-width: 1px;
  text-align: center;
}

.newspaper  {
    ul {
  display: block;
  }
  ul li{
  list-style-type: none;
  display:inline-block;
  width: 33%;
  }
}
.align-right {
  text-align: right;
}
#back_to_index {
  position:absolute;
  margin-left: 600px;
  margin-top: -60px;
}

.chat-name {
  font-size: 1rem;
  float: left;
}
#notice {
  color: green;
}
.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table;
}
#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
    h2 {
      text-align: left;
      font-weight: bold;
      padding: 5px 5px 5px 15px;
      font-size: .75rem;
      margin: -7px;
      margin-bottom: 0px;
      background-color: #c00;
      color: #fff;
    }
    ul li {
      font-size: .75rem;
      list-style: square;
  }
}

.flash_notice, .flash_alert {
  padding: 8px 35px 8px 14px;
  margin-bottom: 20px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  border: 1px solid #fbeed5;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: .9rem;
  line-height: 1.25;
}
.flash_notice {
  background-color: #dff0d8;
  border-color: #d6e9c6;
  color: #468847;
}
.flash_alert {
  background-color: #f2dede;
  border-color: #eed3d7;
  color: #b94a48;
}

.edit-delete-show {
  font-size: .75rem;
  padding-left: 30px;
}

.navbar-custom {
  height: 64px;
  width: 100%;
  margin-bottom: 40px;
  background-color: #0d4884;
  color: #ffffff
}

.navbar-custom .nav-item:active .nav-link,
.navbar-custom .nav-item:hover .nav-link {
  color: white;
}
.navbar-brand {
  width: 35%;
  font-size: .8rem;
  color: #ffffff;
}
.text-white {
  color: #ffffff;
}

.navbar-toggler-icon {
  padding: 20px;
}

.fa.fa-navicon {
  color: white;
  font-size: 35px;
  margin-right: 40px;
}

